GUI fix in create, scrollbar color

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -24,6 +24,10 @@ cap-widget {
 	--cap-border-color: #00000000;
 }
 
+:root {
+	scrollbar-width: auto;
+}
+
 @theme {
 	--font-inter: 'Inter', sans-serif;
 	--font-mulish: 'Mulish', sans-serif;
